--- a/style.sass
+++ b/style.sass
@@ -156,6 +156,11 @@ h2
             transition: all 0.3s ease-out
             &:hover
                 color: #F96900
+    &__basket
+        img
+            display: none
+    &__quantity
+        display: none
 
 .slider
     position: relative
@@ -233,8 +238,8 @@ h2
         line-height: 22px
 
 .product
-    padding-top: 20px
-    margin-bottom: 50px
+    padding-top: 60px
+    margin-bottom: 10px
     .content
         display: grid
         grid-template-columns: repeat(4, 1fr)
@@ -242,7 +247,7 @@ h2
         column-gap: 20px
         row-gap: 60px
     &:last-of-type
-        padding-bottom: 84px
+        padding-bottom: 124px
 
 .footer
     background-color: #464C55
@@ -537,12 +542,13 @@ h2
     input
         display: none
     &__check
-        border: 1px solid #F96900
+        outline: 1px solid #F96900
         &__icon
-            // opacity: 0
             position: absolute
             top: 10px
             right: 10px
+    &:hover
+        cursor: pointer
 
 
 @media (max-width: 992px)
@@ -588,6 +594,7 @@ h2
         overflow: hidden
         order: -1
         margin-bottom: 20px
+        padding: 13px 16px
         .content
             width: max-content
             .active
@@ -605,8 +612,37 @@ h2
                     font-weight: 600
                     color: #464C55
                     line-height: 19px
-        &__basket
-            display: none
+        &__basket.button
+            position: fixed
+            bottom: 20px
+            right: 20px
+            width: 56px
+            height: 56px
+            padding: 14px
+            background: linear-gradient(180deg, #FF6A0A 0%, #FD5608 100%)
+            box-shadow: 0px 7px 25px rgba(0, 0, 0, 0.15)
+            span
+                display: none
+            img
+                display: block
+        &__quantity
+            width: 22px
+            height: 22px
+            background: #FFFFFF
+            outline: 1px solid #FF6409
+            border-radius: 50%
+            position: absolute
+            top: 0
+            right: -4px
+            display: block
+            font-size: 14px
+            line-height: 16px
+            text-align: center
+            color: #FF6409
+            display: flex
+            align-items: center
+            justify-content: center
+
 
     .slider
         margin-top: 0
