--- a/style.sass
+++ b/style.sass
@@ -441,6 +441,7 @@ h2
         font-weight: 600
         line-height: 33px
         margin-bottom: 3px
+        max-width: 270px
     &__descr
         font-weight: 400
         font-size: 14px
@@ -512,6 +513,14 @@ h2
             button
                 max-width: 320px
                 width: 100%
+
+.modal2
+    max-width: 740px
+    height: 389px
+    &__descr
+        margin-bottom: 15px
+    &__descr2
+        color: #4D4D4D
 
 .dop
     margin-top: 3px
