--- a/style.sass
+++ b/style.sass
@@ -6,6 +6,10 @@
 // html
 //     overflow: hidden
 
+body
+    &::-webkit-scrollbar
+        display: none
+
 .d-none
     display: none !important
 
@@ -33,7 +37,7 @@ h2
         font-size: 12px
 
 .button
-    min-height: 40px
+    height: 40px
     font-weight: 400
     font-size: 16px
     color: #D15700
@@ -184,8 +188,8 @@ h2
     &__dotts
         position: absolute
         bottom: 17px
-        display: flex
-        justify-content: center
+        left: 50%
+        transform: translateX(-50%)
         transition: all 0.5s ease-out
         opacity: 0
         .dot
@@ -203,6 +207,8 @@ h2
 
 .new
     overflow: hidden
+    &::-webkit-scrollbar
+        display: none
     
     h2
         margin-bottom: 20px
@@ -435,6 +441,8 @@ h2
         margin-bottom: 50px
         background: #FCFCFC
         overflow: auto
+        &::-webkit-scrollbar
+            display: none
         &__wrapper
             background: #FCFCFC
     &__title
@@ -455,6 +463,10 @@ h2
         top: 20px
         right: -40px
         padding: 0
+        .icon__close
+            display: block
+        .icon__arrow
+            display: none
         img
             width: 24px
         &:hover
@@ -616,7 +628,9 @@ h2
             display: none
     
     .menu
-        overflow: hidden
+        overflow: auto
+        &::-webkit-scrollbar
+            display: none
         order: -1
         margin-bottom: 20px
         padding: 13px 16px
@@ -686,6 +700,7 @@ h2
             display: block   
     
     .new
+        overflow: auto
         order: -2
         .content
             margin-bottom: 30px
@@ -824,6 +839,21 @@ h2
                     font-weight: 600
                     line-height: 22px
                     max-width: 288px
+        &__close
+            top: 16px
+            left: 16px
+            background: red
+            height: 48px
+            width: 48px
+            border-radius: 50%
+            background: #FFFFFF
+            box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.05)
+            .icon__close
+                display: none
+            .icon__arrow
+                display: block
+                margin: 0 auto
+                margin-top: 4px
     
     .dop
         width: 140px
