basket-page1 start

--- a/style.sass
+++ b/style.sass
@@ -114,6 +114,8 @@ h2
         display: flex
         justify-content: space-between
         margin-bottom: 28px
+        a
+            color: #000
     &__phone
         text-align: right
         a
