--- a/style.sass
+++ b/style.sass
@@ -578,6 +578,8 @@ h2
     &__container
             max-width: 700px
             overflow: auto
+            &::-webkit-scrollbar
+                display: none
     h1.title
         font-weight: 600
         font-size: 36px
