--- a/style/style.css
+++ b/style/style.css
@@ -702,6 +702,9 @@ h2 {
   max-width: 700px;
   overflow: auto;
 }
+.basket__container::-webkit-scrollbar {
+  display: none;
+}
 .basket h1.title {
   font-weight: 600;
   font-size: 36px;
