-page_basket price

--- a/style.sass
+++ b/style.sass
@@ -151,8 +151,6 @@ h2
                 height: 32px
                 font-weight: 700
                 margin-bottom: 1px
-            // &__title
-            //     line-height: 19px
             &__active
                 opacity: 1
 
@@ -606,6 +604,7 @@ h2
     &__container
             max-width: 700px
             overflow: auto
+            padding: 0
             &::-webkit-scrollbar
                 display: none
     h1.title
@@ -618,7 +617,16 @@ h2
             height: unset
         &__card
             box-shadow: unset
-            outline: 1px solid #E1E1E8
+            border: 1px solid #E1E1E8
+    .price
+        text-align: end
+        p
+            font-weight: 600
+            font-size: 26px
+            line-height: 35px
+            span
+                margin-left: 14px
+                color: #F96900
 
 
 @media (max-width: 992px)
