basket_page buttons in cards

--- a/style.sass
+++ b/style.sass
@@ -621,6 +621,7 @@ h2
         font-weight: 600
         font-size: 36px
         line-height: 49px
+        margin-bottom: 30px
     .new
         margin-bottom: 10px
         h2
@@ -630,6 +631,18 @@ h2
         &__card
             box-shadow: unset
             border: 1px solid #E1E1E8
+        &__name
+            margin-bottom: 8px
+            display: -webkit-box
+            -webkit-line-clamp: 2
+            -webkit-box-orient: vertical
+            overflow: hidden
+        &__price
+            font-size: 14px
+            height: 32px
+            width: 96px
+            font-weight: 400
+            line-height: unset
     .price
         text-align: end
         margin-bottom: 27px
