basket_page goods

--- a/style.sass
+++ b/style.sass
@@ -677,7 +677,30 @@ h2
             &:hover
                 img
                     filter: invert(0%) sepia(0%) saturate(7500%) hue-rotate(233deg) brightness(92%) contrast(108%)
-
+    .goods
+        margin-bottom: 60px
+        &__row
+            display: flex
+            justify-content: space-between
+            align-items: center
+            margin: 25px 0
+        &__wrapper
+            display: flex
+            align-items: center
+        &__img
+            img
+                width: 64px
+                height: 64px
+                margin-right: 26px
+        &__header
+            font-weight: 600
+            font-size: 18px
+            line-height: 25px
+        &__descr
+            font-weight: 400
+            font-size: 12px
+            line-height: 14px
+            color: #73798C
 
 @media (max-width: 992px)
     .product
