--- a/style/style.css
+++ b/style/style.css
@@ -818,6 +818,35 @@ h2 {
 .basket .buttons .back:hover img {
   filter: invert(0%) sepia(0%) saturate(7500%) hue-rotate(233deg) brightness(92%) contrast(108%);
 }
+.basket .goods {
+  margin-bottom: 60px;
+}
+.basket .goods__row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 25px 0;
+}
+.basket .goods__wrapper {
+  display: flex;
+  align-items: center;
+}
+.basket .goods__img img {
+  width: 64px;
+  height: 64px;
+  margin-right: 26px;
+}
+.basket .goods__header {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 25px;
+}
+.basket .goods__descr {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  color: #73798C;
+}
 
 @media (max-width: 992px) {
   .product .content {
