--- a/style.sass
+++ b/style.sass
@@ -683,7 +683,10 @@ h2
             display: flex
             justify-content: space-between
             align-items: center
-            margin: 25px 0
+            padding: 25px 0
+            border-bottom: 1px solid #E1E1E8
+            &:first-child
+                border-top: 1px solid #E1E1E8
         &__wrapper
             display: flex
             align-items: center
@@ -701,6 +704,8 @@ h2
             font-size: 12px
             line-height: 14px
             color: #73798C
+        hr
+            // border: 1px solid #E1E1E8
 
 @media (max-width: 992px)
     .product
