--- a/style.sass
+++ b/style.sass
@@ -613,10 +613,20 @@ h2
             padding: 0
             &::-webkit-scrollbar
                 display: none
+            .suptitle
+                color: #73798C
+                margin-bottom: 5px
             .title_wrapper
                 display: flex
                 justify-content: space-between
-                margin-bottom: 31px
+            hr
+                height: 4px
+                background: #E2E2E9
+                border: none
+                border-radius: 4px
+                margin: 0 0 9px 0
+            .address
+                margin-bottom: 70px
     h1.title
         font-weight: 600
         font-size: 36px
@@ -667,9 +677,6 @@ h2
         &__basket2
             a
                 max-width: 270px
-        span
-            // &:after
-            //     content: url('data:image/svg+xml;utf8,<svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1 1L7 7L1 13" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>')
         .back
             img
                 transform: rotate(180deg)
@@ -704,8 +711,6 @@ h2
             font-size: 12px
             line-height: 14px
             color: #73798C
-        hr
-            // border: 1px solid #E1E1E8
 
 @media (max-width: 992px)
     .product
